force-app/main/default/objects/locobuzz__Locobuzz_Settings__c/locobuzz__Locobuzz_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting stored data related to Locobuzz</description>
    <label>Locobuzz Settings</label>
</CustomObject>