force-app/main/default/objects/locobuzz__Locobuzz_Settings__c/fields/locobuzz__Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Encryption_Key__c</fullName>
    <description>This field is used to store encryption key</description>
    <label>Encryption Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>