force-app/main/default/objects/locobuzz__Locobuzz_Settings__c/fields/locobuzz__Experience_Type__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Experience_Type__c</fullName>
    <description>This field is used to store Experience Type</description>
    <inlineHelpText>Experience Type 1 = Native, 2 = iframe</inlineHelpText>
    <label>Experience Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>