force-app/main/default/objects/locobuzz__Locobuzz_Settings__c/fields/locobuzz__Initialization_Vector__c.field-meta.xml
<CustomField>
    <fullName>locobuzz__Initialization_Vector__c</fullName>
    <description>This is used to store Initialization Vector</description>
    <label>Initialization Vector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>